@@ -1,7 +1,7 @@
 # kimmer
 Port "https://github.com/immerjs/immer" for kotlin/jvm
 
-# Usage
+## Usage
 
 1. Create immutable object from scratch
 ```kt
@@ -27,3 +27,17 @@ val book2 = new(Book::class).by(book) {
     }
 }
 ```
+
+## Note
+If your JVM version >= 16, you will get an exception
+```
+java.lang.reflect.InaccessibleObjectException: Unable to make protected final java.lang.Class java.lang.ClassLoader.defineClass(byte[],int,int) throws java.lang.ClassFormatError accessible: module java.base does not "opens java.lang" to unnamed module 
+```
+In order to resolve this problem, please add 
+```
+--illegal-access=permit
+```
+to JVM arguments
+
+# Step by step guide
+Please click [here](doc/get-started.md) to view the guide
